enhancement: provide a solution for the gap left by fixed headerbar

--- a/less/components/headerbar.less
+++ b/less/components/headerbar.less
@@ -31,6 +31,15 @@
 	}
 }
 
+// offset fixed headerbar (apply to the adjacent sibling)
+.offset-fixed-headerbar {
+	padding-top: @headerbar-height;
+
+	.is-native-app & {
+		padding-top: @headerbar-height + @statusbar-height;
+	}
+}
+
 
 // variants
 
